testsuite/tests/typing-modules-bugs/pr7414_bad.compilers.reference
File "pr7414_bad.ml", line 52, characters 16-29:
52 | module Ignore = Force(Choose)
                     ^^^^^^^^^^^^^
Error: Modules do not match:
       () -> sig module Choice : T val r : '_weak1 list ref ref end
     is not included in () -> S
     Modules do not match:
       sig module Choice : T val r : '_weak1 list ref ref end
     is not included in
       S
     Try changing value r to be a Choice.t list ref ref
